[gd_scene load_steps=4 format=3 uid="uid://cdbsstpvtrvhd"]

[ext_resource type="Script" path="res://addons/tattomoosa.vision_cone_3d/examples/example_src/VisionConeDemoControls.gd" id="1_vf8s6"]
[ext_resource type="Script" path="res://addons/tattomoosa.vision_cone_3d/examples/example_src/ui/ValueLabel.gd" id="2_8lgvy"]

[sub_resource type="ButtonGroup" id="ButtonGroup_dqtte"]

[node name="VisionConeControls" type="PanelContainer"]
offset_left = 13.0
offset_top = 14.0
offset_right = 308.0
offset_bottom = 24.0
script = ExtResource("1_vf8s6")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="Range" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/VBoxContainer/Range"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/Range/HBoxContainer2"]
layout_mode = 2
text = "Range:"

[node name="RangeValueLabel" type="Label" parent="MarginContainer/VBoxContainer/Range/HBoxContainer2" node_paths=PackedStringArray("range_control")]
layout_mode = 2
script = ExtResource("2_8lgvy")
range_control = NodePath("../../RangeSlider")

[node name="RangeSlider" type="HSlider" parent="MarginContainer/VBoxContainer/Range"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
min_value = 1.0
max_value = 40.0
step = 0.5
value = 20.0

[node name="Angle" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/VBoxContainer/Angle"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/Angle/HBoxContainer2"]
layout_mode = 2
text = "Angle:"

[node name="AngleValueLabel" type="Label" parent="MarginContainer/VBoxContainer/Angle/HBoxContainer2" node_paths=PackedStringArray("range_control")]
layout_mode = 2
script = ExtResource("2_8lgvy")
range_control = NodePath("../../AngleSlider")

[node name="AngleSlider" type="HSlider" parent="MarginContainer/VBoxContainer/Angle"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
min_value = 0.1
max_value = 90.0
step = 0.1
value = 45.0

[node name="VisionTestModeControls" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label2" type="Label" parent="MarginContainer/VBoxContainer/VisionTestModeControls"]
layout_mode = 2
text = "Vision Test Mode"

[node name="VisionTestMode" type="HBoxContainer" parent="MarginContainer/VBoxContainer/VisionTestModeControls"]
layout_mode = 2

[node name="VisionTestCenterCheckBox" type="CheckBox" parent="MarginContainer/VBoxContainer/VisionTestModeControls/VisionTestMode"]
unique_name_in_owner = true
layout_mode = 2
button_group = SubResource("ButtonGroup_dqtte")
text = "Center"

[node name="VisionTestScatterCheckBox" type="CheckBox" parent="MarginContainer/VBoxContainer/VisionTestModeControls/VisionTestMode"]
unique_name_in_owner = true
layout_mode = 2
button_pressed = true
button_group = SubResource("ButtonGroup_dqtte")
text = "Scatter"

[node name="VisionTestCollideCheckBox" type="CheckBox" parent="MarginContainer/VBoxContainer/VisionTestModeControls/VisionTestMode"]
unique_name_in_owner = true
layout_mode = 2
button_group = SubResource("ButtonGroup_dqtte")
text = "Collide"

[node name="ProbesPerFrame" type="VBoxContainer" parent="MarginContainer/VBoxContainer/VisionTestModeControls"]
layout_mode = 2

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/VBoxContainer/VisionTestModeControls/ProbesPerFrame"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/VisionTestModeControls/ProbesPerFrame/HBoxContainer2"]
layout_mode = 2
text = "Max Probes Per Shape:"

[node name="RaycastPerFrameValueLabel" type="Label" parent="MarginContainer/VBoxContainer/VisionTestModeControls/ProbesPerFrame/HBoxContainer2" node_paths=PackedStringArray("range_control")]
layout_mode = 2
script = ExtResource("2_8lgvy")
range_control = NodePath("../../RaycastsPerFrameSlider")

[node name="RaycastsPerFrameSlider" type="HSlider" parent="MarginContainer/VBoxContainer/VisionTestModeControls/ProbesPerFrame"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
min_value = 1.0
value = 10.0

[node name="MaxBodies" type="VBoxContainer" parent="MarginContainer/VBoxContainer/VisionTestModeControls"]
layout_mode = 2

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/VBoxContainer/VisionTestModeControls/MaxBodies"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/VisionTestModeControls/MaxBodies/HBoxContainer2"]
layout_mode = 2
text = "Max Bodies Per Frame:"

[node name="MaxBodiesFrameValueLabel" type="Label" parent="MarginContainer/VBoxContainer/VisionTestModeControls/MaxBodies/HBoxContainer2" node_paths=PackedStringArray("range_control")]
layout_mode = 2
script = ExtResource("2_8lgvy")
range_control = NodePath("../../MaxBodiesSlider")

[node name="MaxBodiesSlider" type="HSlider" parent="MarginContainer/VBoxContainer/VisionTestModeControls/MaxBodies"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
min_value = 1.0
max_value = 500.0
value = 11.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="SwitchCameraButton" type="Button" parent="MarginContainer/VBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Switch Camera"

[node name="ObserverRotation" type="VBoxContainer" parent="MarginContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/VBoxContainer/VBoxContainer/ObserverRotation"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/VBoxContainer/ObserverRotation/HBoxContainer2"]
layout_mode = 2
text = "Observer Rotation:"

[node name="ObserverRotationValueLabel" type="Label" parent="MarginContainer/VBoxContainer/VBoxContainer/ObserverRotation/HBoxContainer2" node_paths=PackedStringArray("range_control")]
layout_mode = 2
script = ExtResource("2_8lgvy")
range_control = NodePath("../../ObserverRotationSlider")

[node name="ObserverRotationSlider" type="HSlider" parent="MarginContainer/VBoxContainer/VBoxContainer/ObserverRotation"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
min_value = -90.0
max_value = 90.0

[node name="ObserverPosition" type="VBoxContainer" parent="MarginContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/VBoxContainer/VBoxContainer/ObserverPosition"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/VBoxContainer/ObserverPosition/HBoxContainer2"]
layout_mode = 2
text = "Observer Position:"

[node name="ObserverPositionValueLabel" type="Label" parent="MarginContainer/VBoxContainer/VBoxContainer/ObserverPosition/HBoxContainer2" node_paths=PackedStringArray("range_control")]
layout_mode = 2
script = ExtResource("2_8lgvy")
range_control = NodePath("../../ObserverPositionSlider")

[node name="ObserverPositionSlider" type="HSlider" parent="MarginContainer/VBoxContainer/VBoxContainer/ObserverPosition"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
min_value = -8.0
max_value = 8.0
step = 0.1
